[package]
name = "pco_store"
version = "0.2.0"
edition = "2024"
license = "MIT"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
description = "Easy to use numeric compression"
categories = ["compression", "database"]
keywords = ["compression", "timeseries", "postgres"]
repository = "https://github.com/pganalyze/pco_store"

[lib]
proc-macro = true

[dependencies]
ahash = "0.8"
anyhow = "1.0"
deadpool-postgres = "0.14"
futures = "0.3"
pco = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[dev-dependencies]
chrono = "0.4"
dotenvy = "0.15"
macrotest = "1.1"
serial_test = "3.2"
tokio = { version = "1.43", features = ["full"] }

[[bench]]
name = "bucket_size"
harness = false

[[bench]]
name = "float"
harness = false

[[bench]]
name = "comparison"
harness = false
