[package]
name = "pco_store"
version = "0.2.0"
edition = "2024"
license = "MIT"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
description = "Easy to use numeric compression"
categories = ["compression", "database"]
keywords = ["compression", "timeseries", "postgres"]
repository = "https://github.com/pganalyze/pco_store"

[lib]
proc-macro = true

[dependencies]
ahash = "0.8"
anyhow = "1.0"
deadpool-postgres = "0.14"
futures = "0.3"
pco = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0" }
serde_with = "3.16"
syn = "2.0"
tokio-postgres = "0.7"
zstd = "0.13"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
macrotest = "1.1"
peak_alloc = "0.2"
serial_test = "3.2"
tokio = { version = "1.43", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
uuid = { version = "1.23", features = ["serde"] }

[[bench]]
name = "bucket_size"
harness = false

[[bench]]
name = "float"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "synthetic"
harness = false
